  clicking on a moving cart causes it to crash.  Fixes #607

--MinPosseFraction now 0.66 (was 0.5), which means you need a super-majority to
  agree before you land a kill.  The cap has been pushed up to 99 (was 5),
  which is effectively unlimited, which means that a rogue posse cannot
  slaughter a village unless the non-posse members are in the super-minority.





Version 332    2020-May-1

--Fixed a rare bug where a player standing still and not changing while you
  move out of range of them will still have emote and animation sounds
  displayed for them (because you never get a PO message for them).  Their
  distances is now measured and they are marked outOfRange client-side, even if
  no PO message arrives for them.

--Fence and wall making now much less fiddly, because you auto-move to a
  neighboring tile if you try to build a fence or wall where you're currently
  standing (before, the build action was blocked by you standing there).

--Fixed tutorial wording to match how YUM currently works.  Fixes #604




Server Fixes

--If player had short last life or is twin, we don't even let them join a
  posse, to avoid confusion.  Otherwise, a seeminly large-enough posse might be
  ineffective.  A short life or twin player can still lead a posse or complete
  a solo kill in a low-pop area (but they don't count toward the population of
  the posse that they lead).

--Being part of a full-sized posse prevents biome sickness while chasing
  victim (victim can't hide in bad biome to make you drop your weapons).

--VictimTerrifiedEmote (where they whimper repeatedly) now triggered by kill
  posse being big enough.  Thus, you can tell whether you're in real danger of
  being killed by whether you are whimpering.  The posse can also know whether
  it is big enough by whether you are whimpering or not.

--When targeted by a full-sized posse for killing, where the posse has more
  than one member (not in case of wilderness solo posse), you drop what you are